src/test/pass/variant_basic_assignments.ly
enum class Option[A] {
    Some(A),
    None
}

Option[integer] i = Some(10)
i = None
